tests/invalid/semantico_sin_start.flow
// EXPECT: E301
workflow demo {
    validar -> end
}
